fix: badge spacing

--- a/src/components/sbb-menu-action/sbb-menu-action.scss
+++ b/src/components/sbb-menu-action/sbb-menu-action.scss
@@ -73,6 +73,4 @@
 
 .sbb-menu-action__amount {
   @include badge;
-
-  margin-inline-end: var(--sbb-spacing-fixed-2x);
 }
